add type checker and refactored example generator